--- a/local-dev/clair/config.yaml
+++ b/local-dev/clair/config.yaml
@@ -15,9 +15,7 @@ matcher:
   migrations: true
 remote_matchers:
   - name: crda
-    params: url=https://someurl key=somekey
-  - name: someother
-    params: url=https://someurl key=somekey
+    params: url="https://f8a-analytics-preview-2445582058137.production.gw.apicast.io/?user_key=3e42fa66f65124e6b1266a23431e3d08 ecosystem=pypi"
 notifier:
   indexer_addr: http://clair-traefik:6060/
   matcher_addr: http://clair-traefik:6060/
