--- a/local-dev/clair/config.yaml
+++ b/local-dev/clair/config.yaml
@@ -14,6 +14,8 @@ matcher:
   max_conn_pool: 100
   migrations: true
 remote_matchers:
+  sets:
+    - crda
   config:
     crda:
       url: https://f8a-analytics-preview-2445582058137.production.gw.apicast.io/?user_key=3e42fa66f65124e6b1266a23431e3d08
