--- a/local-dev/clair/config.yaml
+++ b/local-dev/clair/config.yaml
@@ -2,10 +2,7 @@
 log_level: debug-color
 introspection_addr: ""
 http_listen_addr: ":6000"
-updaters:
-  sets:
-    - rhel
-    - alpine
+updaters: {}
 indexer:
   connstring: host=clair-db port=5432 user=clair dbname=clair sslmode=disable
   scanlock_retry: 10
